--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 		   <tr>
 			   
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/acl20.png" alt="PontTuset" width="125" style="border-style: none">
+	              <td width="25%"><img src="./img/acl20.png" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://arxiv.org/abs/2005.00669">
 	<papertitle>Contrastive Self-Supervised Learning for Commonsense Reasoning</papertitle></a><br>
@@ -186,7 +186,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 	              <td width="20%"><img src="./img/iccv.png" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="80%" valign="top">
 	                <p><a href="https://arxiv.org/abs/1905.06242">
-	<papertitle>Budget-Aware Adapters for Multi-Domain Learning</papertitle></a><br>Rodrigo Berriel, Stephane Lathuili, <strong>M. Nabi</strong>, Tassilo Klein, Thiago Oliveira, Nicu Sebe, Elisa Ricci<br>
+	<papertitle>Budget-Aware Adapters for Multi-Domain Learning</papertitle></a><br>R. Berriel, S. Lathuili, <strong>M. Nabi</strong>, T. Klein, T. Oliveira, N. Sebe, E. Ricci<br>
                   <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2019 &nbsp; <br>
                   <a href="https://arxiv.org/pdf/1905.06242.pdf">PDF</a> /
 		  <a href="https://github.com/rodrigoberriel/budget-aware-adapters">code</a>
@@ -200,7 +200,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             </tr>			
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/acl19.png" alt="PontTuset" width="125" style="border-style: none">
+	              <td width="25%"><img src="./img/acl19.png" alt="PontTuset" width="130" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://arxiv.org/abs/1905.13497">
 	<papertitle>Attention Is (not) All You Need for Commonsense Reasoning</papertitle></a><br>
@@ -219,7 +219,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             </tr>
 
 <!--Next paper should be listed in bottom -->
-	              <td width="20%"><img src="./img/dgm_2.png" alt="PontTuset" width="140" style="border-style: none">
+	              <td width="20%"><img src="./img/dgm_2.png" alt="PontTuset" width="150" style="border-style: none">
 	              </td><td width="80%" valign="top">
 	                <p><a href="https://arxiv.org/abs/1904.03137">
 	<papertitle>Learning to Remember: A Synaptic Plasticity Driven Framework for Continual Learning</papertitle></a><br>Oleksiy Ostapenko, Mihai Puscas, Tassilo Klein, Patrick Jahnichen, <strong>M. Nabi</strong><br>
@@ -262,7 +262,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                   <em>Workshop on Machine Learning on the Phone and Consumer Devices at NIPS</em>, 2017 &nbsp; <br>
                   <a href="https://arxiv.org/pdf/1712.07557.pdf">PDF</a> /
 		  <a href="https://paperswithcode.com/paper/differentially-private-federated-learning-a">code</a> /
-				<a href="https://miro.medium.com/max/2000/1*aq_Mx_XflA-bSZvAdfUEfA.jpeg">blog</a> /
+				<a href="https://medium.com/sap-machine-learning-research/client-sided-differential-privacy-preserving-federated-learning-1fab5242d31b">blog</a> /
 				<a href="https://miro.medium.com/max/2000/1*aq_Mx_XflA-bSZvAdfUEfA.jpeg">poster</a>
                 </p><p></p>
 <!--
