--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 		   <tr>
 			   
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/acl20.png" alt="PontTuset" width="130" style="border-style: none">
+	              <td width="25%"><img src="./img/acl20.png" alt="PontTuset" width="125" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://arxiv.org/abs/2005.00669">
 	<papertitle>Contrastive Self-Supervised Learning for Commonsense Reasoning</papertitle></a><br>
@@ -219,7 +219,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             </tr>
 
 <!--Next paper should be listed in bottom -->
-	              <td width="20%"><img src="./img/dgm_2.png" alt="PontTuset" width="150" style="border-style: none">
+	              <td width="25%"><img src="./img/dgm_2.png" alt="PontTuset" width="150" style="border-style: none">
 	              </td><td width="80%" valign="top">
 	                <p><a href="https://arxiv.org/abs/1904.03137">
 	<papertitle>Learning to Remember: A Synaptic Plasticity Driven Framework for Continual Learning</papertitle></a><br>Oleksiy Ostapenko, Mihai Puscas, Tassilo Klein, Patrick Jahnichen, <strong>M. Nabi</strong><br>
@@ -255,7 +255,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             </tr>
 
 <!--Next paper should be listed in bottom -->
-	              <td width="20%"><img src="./img/dpfl.png" alt="PontTuset" width="140" style="border-style: none">
+	              <td width="20%"><img src="./img/dpfl_3.png" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="80%" valign="top">
 	                <p><a href="https://arxiv.org/abs/1712.07557">
 	<papertitle>Differentially Private Federated Learning: A Client Level Perspective</papertitle></a><br>R. Gayer, T. Klein, <strong>M. Nabi</strong><br>
