--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 <!--  		      
 <p> <strong>[2018.11.06]</strong> Three papers are accepted in <a href="http://wacv19.wacv.net/">WACV 2019</a>.</p>
  -->		      
-<p> <strong>[2018.09.14]</strong> Our <a href="https://medium.com/sap-machine-learning-research/try-9e1ed9ae09ed">team</a> is among top-performing teams at the <a href="https://vizwiz.org/workshops/2018-workshop/">Vizwiz</a> Challenge at ECCV 2018.</p>
+<p> <strong>[2018.09.14]</strong> Our <a href="https://medium.com/sap-machine-learning-research/try-9e1ed9ae09ed">team</a> is among top-performing teams at the ECCV <a href="https://vizwiz.org/workshops/2018-workshop/">VizWiz Grand Challenge</a>.</p>
 		      
 <p> <strong>[2018.04.01]</strong> A workshop on <a href="https://sites.google.com/view/sivl/">Shortcomings in Vision and Language</a> is accepted at ECCV 2018.</p>
 <!--  
@@ -155,11 +155,11 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             <tbody><tr>
               <td>
                 <heading>Selected Publications</heading>
+		      <p>For the full list of my publications please visit my <a href="https://scholar.google.com/citations?user=31seHAMAAAAJ&hl=en">Google Scholar</a> page.</p>
+
               </td>
             </tr>
           </tbody></table>
-<p>For the full list of my publications please visit my <a href="https://scholar.google.com/citations?user=31seHAMAAAAJ&hl=en">Google Scholar</a> page.</p>
-
 
 
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="7">
