--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 	              <td width="25%"><img src="./img/dgm_3.png" alt="PontTuset" width="150" style="border-style: none">
 	              </td><td width="80%" valign="top">
 	                <p><a href="https://arxiv.org/abs/1904.03137">
-	<papertitle>Learning to Remember: A Synaptic Plasticity Driven Framework for Continual Learning</papertitle></a><br>Oleksiy Ostapenko, Mihai Puscas, Tassilo Klein, Patrick Jahnichen, <strong>M. Nabi</strong><br>
+	<papertitle>Learning to Remember: A Synaptic Plasticity Driven Framework for Continual Learning</papertitle></a><br>O. Ostapenko, M. Puscas, T. Klein, P. Jahnichen, <strong>M. Nabi</strong><br>
                   <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2019 &nbsp; <br>
                   <a href="https://arxiv.org/pdf/1904.03137.pdf">PDF</a> /
 		  <a href="https://github.com/SAP-samples/machine-learning-dgm">code</a> /
