--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://arxiv.org/abs/2008.01510">
 	<papertitle>Online Continual Learning under Extreme Memory Constraints</papertitle></a><br>
-			T. Klein, <strong>M. Nabi</strong><br>
+			E. Fini, S. Lathuilire, E. Sangineto, <strong>M. Nabi</strong>, Elisa Ricci<br>
                   <em>European Conference on Computer Vision (ECCV)</em>, 2020 &nbsp; <br>
                   <a href="https://arxiv.org/pdf/2008.01510.pdf">PDF</a> /
 		  <a href="https://github.com/DonkeyShot21/batch-level-distillation">code</a>
