--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 		   <tr>
 			   
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/eccv20.png" alt="PontTuset" width="125" style="border-style: none">
+	              <td width="25%"><img src="./img/eccv20_2.png" alt="PontTuset" width="125" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://arxiv.org/abs/2008.01510">
 	<papertitle>Online Continual Learning under Extreme Memory Constraints</papertitle></a><br>
