--- a/index.html
+++ b/index.html
@@ -122,9 +122,16 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                 <heading>News</heading>
 <!-- 		      
 <p> <strong>[2020.04.05]</strong> A <a href="https://arxiv.org/pdf/2005.00669.pdf">paper</a> on Contrastive Self-Supervised Learning for Commonsense Reasoning is accepted at <a href="http://www.acl2020.org">ACL 2020</a>. </p>		      
- -->		      
+Topic Editor for the Identifying, Analyzing, and Overcoming Challenges in Vision and Language Research in the Frontiers Research Topics
+Proud to be one of the co-Editors of a Special Issue on Language and Vision by Frontiers!
+I serve as a topic editor for a Special Issue on Language and Vision by Frontiers!
+-->		      
+
+<p> <strong>[2019.09.02]</strong> I serve as a topic editor for the <a href="https://www.frontiersin.org/research-topics/18532/identifying-analyzing-and-overcoming-challenges-in-vision-and-language-research">Special Issue on Language and Vision by Frontiers</a>.</p>		      
+	      
 <p> <strong>[2019.09.02]</strong> I am looking for a highly motivated PhD student to work on <a href="https://iid.unitn.it/education/admission/reserved-topic-scholarships">continual learning</a>.</p>		      
-<!-- 			      
+<!-- 
+		      <!-- 			      
 <p> <strong>[2019.07.22]</strong> A <a href="https://arxiv.org/pdf/1905.06242.pdf">paper</a> on Multi-Domain Learning is accepted at <a href="http://iccv2019.thecvf.com/">ICCV 2019</a>. </p>
 		      
 <p> <strong>[2019.05.14]</strong> A <a href="https://arxiv.org/pdf/1905.13497.pdf">paper</a> on commonsense reasoning is accepted at <a href="http://www.acl2019.org">ACL 2019</a>. </p>
