--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Proud to be one of the co-Editors of a Special Issue on Language and Vision by F
 I serve as a topic editor for a Special Issue on Language and Vision by Frontiers!
 -->		      
 
-<p> <strong>[2019.09.02]</strong> I serve as a topic editor for the <a href="https://www.frontiersin.org/research-topics/18532/identifying-analyzing-and-overcoming-challenges-in-vision-and-language-research">Special Issue on Language and Vision by Frontiers</a>.</p>		      
+<p> <strong>[2019.09.02]</strong> I serve as a topic editor for the <a href="https://www.frontiersin.org/research-topics/18532/identifying-analyzing-and-overcoming-challenges-in-vision-and-language-research">Special Issue on Language and Vision</a> by Frontiers.</p>		      
 	      
 <p> <strong>[2019.09.02]</strong> I am looking for a highly motivated PhD student to work on <a href="https://iid.unitn.it/education/admission/reserved-topic-scholarships">continual learning</a>.</p>		      
 <!-- 
