--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p align="center">
                   <name>Moin Nabi</name>
                   
-                </p><p align="">I am a Lead Research Scientist at <a href="https://www.sap.com/trends/machine-learning.html">SAP AI Research</a> in Berlin.
+                </p><p align="">I am a Principal Research Scientist at <a href="https://www.sap.com/trends/machine-learning.html">SAP AI Research</a> in Berlin.
 </br>
 		  </br>
 		      Before that, I was a postdoctoral research fellow in <a href="http://disi.unitn.it/~mhug/index.html">Deep Relational Learning</a> group at the University of Trento with Professor <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a> and a visiting researcher in the CS department at the <a href="https://www.cs.washington.edu/">University of Washington</a> working with <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a>.
@@ -172,6 +172,25 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="7">
 		<tbody>
 		   <tr>
+
+<!--Next paper should be listed in bottom -->
+	              <td width="25%"><img src="./img/eccv20_2.png" alt="PontTuset" width="150" style="border-style: none">
+	              </td><td width="75%" valign="top">
+	                <p><a href="https://www.aclweb.org/anthology/2021.naacl-main.192/">
+	<papertitle>EaSe: A Diagnostic Tool for VQA based on Answer Diversity</papertitle></a><br>
+			S. Jolly, S. Pezzelle, <strong>M. Nabi</strong><br>
+                  <em>North American Chapter of the Association for Computational Linguistics: Human Language Technologies (NAACL-HLT)</em>, 2021 &nbsp; <br>
+                  <a href="https://www.aclweb.org/anthology/2021.naacl-main.192.pdf">PDF</a> /
+		  <a href="https://github.com/shailzajolly/EaSe">code</a>
+
+                </p><p></p>
+<!--
+			      <p>In this paper, we proposed a novel crowd dataset with both annotations of abnormal crowd behavior and crowd emotion. We also presented a method which exploits jointly the complimentary information of these two task, outperforming all baselines of both tasks significantly.
+-->
+		</p><p></p>
+                <p></p>
+              </td>
+            </tr>	
 			   
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/eccv20_2.png" alt="PontTuset" width="150" style="border-style: none">
