--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 		   <tr>
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/eccv20_2.png" alt="PontTuset" width="150" style="border-style: none">
+	              <td width="25%"><img src="./img/naacl21.png" alt="PontTuset" width="150" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://www.aclweb.org/anthology/2021.naacl-main.192/">
 	<papertitle>EaSe: A Diagnostic Tool for VQA based on Answer Diversity</papertitle></a><br>
