--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 <a href="./files/cv.pdf">CV</a> &nbsp;/&nbsp;
 <!--<a href="https://scholar.google.it/citations?user=31seHAMAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp; -->
 <a href="./files/Thesis_compressed.pdf">Thesis</a> &nbsp;/&nbsp;
-<a href="https://scholar.google.com/citations?hl=en&user=31seHAMAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> &nbsp;/&nbsp; 
+<a href="https://scholar.google.com/citations?user=31seHAMAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp; 
 <a href="https://it.linkedin.com/pub/moin-nabi/3b/492/aa5"> LinkedIn </a>
                 </p>
               </td>
@@ -127,6 +127,8 @@ Proud to be one of the co-Editors of a Special Issue on Language and Vision by F
 I serve as a topic editor for a Special Issue on Language and Vision by Frontiers!
 -->		      
 
+<p> <strong>[2019.09.02]</strong> The <strong><a href="https://arxiv.org/abs/2108.01775v1">solo-learn</a></strong>, a library for self-supervised visual representation learning is <a href="https://github.com/vturrisi/solo-learn">online</a>.</p>		      		      
+		      
 <p> <strong>[2019.09.02]</strong> I serve as a topic editor for the <a href="https://www.frontiersin.org/research-topics/18532/identifying-analyzing-and-overcoming-challenges-in-vision-and-language-research">Special Issue on Language and Vision</a> by Frontiers.</p>		      
 	      
 <p> <strong>[2019.09.02]</strong> I am looking for a highly motivated PhD student to work on <a href="https://iid.unitn.it/education/admission/reserved-topic-scholarships">continual learning</a>.</p>		      
@@ -162,7 +164,7 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
             <tbody><tr>
               <td>
                 <heading>Selected Publications</heading>
-		      <p>For the full list of my publications please visit my <a href="https://scholar.google.com/citations?user=31seHAMAAAAJ&hl=en">Google Scholar</a> page.</p>
+		      <p>For the full list of my publications please visit my <a href="https://scholar.google.com/citations?hl=en&user=31seHAMAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> page.</p>
 
               </td>
             </tr>
