--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 	                <p><a href="https://www.aclweb.org/anthology/2021.naacl-main.192/">
 	<papertitle>A Unified Objective for Novel Class Discovery</papertitle></a><br>
 			E. Fini, E. Sangineto, S. Lathuilire, Z. Zhong, <strong>M. Nabi</strong>, Elisa Ricci<br>
-                  <em>International Conference on Computer Vision (ICCV)</em>, 2021 &nbsp; <br>
+                  <em>International Conference on Computer Vision (ICCV)</em>, 2021 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
 		<a href=".">PDF</a> /
-		  <a href=".">code</a>
+		  <a href="https://ncd-uno.github.io/">code</a>
 
                 </p><p></p>
 <!--
