--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 		   <tr>
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/iccv_21.png" alt="PontTuset" width="140" style="border-style: none">
+	              <td width="25%"><img src="./img/iccv_21.png" alt="PontTuset" width="100" style="border-style: none">
 	              </td><td width="75%" valign="top">
-	                <p><a href="https://www.aclweb.org/anthology/2021.naacl-main.192/">
+	                <p><a href="https://ncd-uno.github.io/">
 	<papertitle>A Unified Objective for Novel Class Discovery</papertitle></a><br>
 			E. Fini, E. Sangineto, S. Lathuilire, Z. Zhong, <strong>M. Nabi</strong>, Elisa Ricci<br>
                   <em>International Conference on Computer Vision (ICCV)</em>, 2021 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
