--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://ncd-uno.github.io/">
 	<papertitle>A Unified Objective for Novel Class Discovery</papertitle></a><br>
-			E. Fini, E. Sangineto, S. Lathuilire, Z. Zhong, <strong>M. Nabi</strong>, Elisa Ricci<br>
+			E. Fini, E. Sangineto, S. Lathuilire, Z. Zhong, <strong>M. Nabi</strong>, E. Ricci<br>
                   <em>International Conference on Computer Vision (ICCV)</em>, 2021 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
 		<a href=".">PDF</a> /
 		  <a href="https://ncd-uno.github.io/">code</a>
@@ -220,7 +220,7 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://arxiv.org/abs/2008.01510">
 	<papertitle>Online Continual Learning under Extreme Memory Constraints</papertitle></a><br>
-			E. Fini, S. Lathuilire, E. Sangineto, <strong>M. Nabi</strong>, Elisa Ricci<br>
+			E. Fini, S. Lathuilire, E. Sangineto, <strong>M. Nabi</strong>, E. Ricci<br>
                   <em>European Conference on Computer Vision (ECCV)</em>, 2020 &nbsp; <br>
                   <a href="https://arxiv.org/pdf/2008.01510.pdf">PDF</a> /
 		  <a href="https://github.com/DonkeyShot21/batch-level-distillation">code</a>
