--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 		   <tr>
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/iccv_21.png" alt="PontTuset" width="100" style="border-style: none">
+	              <td width="20%"><img src="./img/iccv_21.png" alt="PontTuset" width="120" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://ncd-uno.github.io/">
 	<papertitle>A Unified Objective for Novel Class Discovery</papertitle></a><br>
 			E. Fini, E. Sangineto, S. Lathuilire, Z. Zhong, <strong>M. Nabi</strong>, E. Ricci<br>
-                  <em>International Conference on Computer Vision (ICCV)</em>, 2021 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
+                  <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2021 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
 		<a href=".">PDF</a> /
 		  <a href="https://ncd-uno.github.io/">code</a>
 
