--- a/index.html
+++ b/index.html
@@ -176,14 +176,15 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 		   <tr>
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/iccv_21_3.png" alt="PontTuset" width="200" style="border-style: none">
+	              <td width="25%"><img src="./img/iccv_21_3.png" alt="PontTuset" width="170" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://ncd-uno.github.io/">
 	<papertitle>A Unified Objective for Novel Class Discovery</papertitle></a><br>
 			E. Fini, E. Sangineto, S. Lathuilire, Z. Zhong, <strong>M. Nabi</strong>, E. Ricci<br>
                   <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2021 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
-		<a href=".">PDF</a> /
-		  <a href="https://ncd-uno.github.io/">code</a>
+		<a href=".">PDF</a> / 
+		<a href="https://ncd-uno.github.io/">project page</a> /
+		  <a href="https://github.com/DonkeyShot21/UNO">code</a>
 
                 </p><p></p>
 <!--
@@ -416,6 +417,7 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 		<font color="red"><strong>Microsoft Best Student Paper Award</strong></font><br>
 
                   <a href="https://arxiv.org/pdf/1708.09644.pdf">PDF</a> /
+		<a href="https://github.com/otoofim/ABNORMAL_EVENT_DETECTION-IN_VIDEOS_USING_GENERATIVE_ADVERSARIAL_NETS">code</a> /
                   <a href="#">bibtex</a>
                 </p><p></p>
 <!--
