--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Proud to be one of the co-Editors of a Special Issue on Language and Vision by F
 I serve as a topic editor for a Special Issue on Language and Vision by Frontiers!
 -->		      
 
-<p> <strong>[2021.09.06]</strong> I gave a <a href="https://www.youtube.com/watch?v=pSuFwH5lw3E">talk</a> on Continual Learning at the <a href="https://www.meetup.com/berlin-machine-learning/events/277956570/">Berlin ML MeetUp</a></a>.</p>
+<p> <strong>[2021.09.06]</strong> I gave a <strong><a href="https://www.youtube.com/watch?v=pSuFwH5lw3E">talk on Continual Learning</a><strong> at the <a href="https://www.meetup.com/berlin-machine-learning/events/277956570/">Berlin ML MeetUp</a></a>.</p>
 		      
 <p> <strong>[2021.08.01]</strong> The <strong><a href="https://arxiv.org/abs/2108.01775v1">solo-learn</a></strong>, a library for self-supervised visual representation learning is <a href="https://github.com/vturrisi/solo-learn">online</a>.</p>		      		      
 		      
