--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="https://raw.githubusercontent.com/SAP-samples/emnlp2021-attention-contrastive-learning/main/img/attention_contrastive.png" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="75%" valign="top">
-	                <p><a href=".">
+	                <p><a href="https://arxiv.org/abs/2109.05108">
 	<papertitle>Attention-based Contrastive Learning for Winograd Schemas</papertitle></a><br>
 			T. Klein, <strong>M. Nabi</strong><br>
                   <em>Findings of Empirical Methods in Natural Language Processing (EMNLP)</em>, 2021 &nbsp; <br>
-                  <a href=".">PDF</a> /
+                  <a href="https://arxiv.org/pdf/2109.05108.pdf">PDF</a> /
 		  <a href="https://github.com/SAP-samples/emnlp2021-attention-contrastive-learning/">code</a>
 
                 </p><p></p>
@@ -200,11 +200,11 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="https://raw.githubusercontent.com/SAP-samples/emnlp2021-contrastive-refinement/main/img/refinement_task.png" alt="PontTuset" width="150" style="border-style: none">
 	              </td><td width="75%" valign="top">
-	                <p><a href=".">
+	                <p><a href="https://arxiv.org/abs/2109.05105">
 	<papertitle>Towards Zero-shot Commonsense Reasoning with Self-supervised Refinement of Language Models</papertitle></a><br>
 			T. Klein, <strong>M. Nabi</strong><br>
                   <em>Empirical Methods in Natural Language Processing (EMNLP)</em>, 2021 &nbsp; <br>
-                  <a href=".">PDF</a> /
+                  <a href="https://arxiv.org/pdf/2109.05105.pdf">PDF</a> /
 		  <a href="hhttps://github.com/SAP-samples/emnlp2021-contrastive-refinement/">code</a>
 
                 </p><p></p>
