--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Proud to be one of the co-Editors of a Special Issue on Language and Vision by F
 I serve as a topic editor for a Special Issue on Language and Vision by Frontiers!
 -->		      
 
-<p> <strong>[2021]</strong> Recently accepted papers - 2 @EMNLP-21, 1 @ICCV-21, 1 @NAACL-21, 1 @WACV-21, 1 @IPMI-21		      
+<p> <strong>[2021]</strong> Recently accepted papers - 2 @EMNLP, 1 @ICCV, 1 @NAACL, 1 @WACV, 1 @IPMI	      
 		      
 <p> <strong>[2021.09.06]</strong> I gave a <strong><a href="https://www.youtube.com/watch?v=pSuFwH5lw3E">talk</a></strong> on Continual Learning at the <a href="https://www.meetup.com/berlin-machine-learning/events/277956570/">Berlin ML MeetUp</a></a>.</p>
 		      
