--- a/index.html
+++ b/index.html
@@ -179,6 +179,25 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 		<tbody>
 		   <tr>
 
+<!--Next paper should be listed in bottom -->
+	              <td width="25%"><img src="https://raw.githubusercontent.com/SAP-samples/acl2022-self-contrastive-decorrelation/main/images/scd_illustration.png" alt="PontTuset" width="150" style="border-style: none">
+	              </td><td width="75%" valign="top">
+	                <p><a href="https://arxiv.org/abs/2203.07847">
+	<papertitle>SCD: Self-Contrastive Decorrelation for Sentence Embeddings</papertitle></a><br>
+			T. Klein, <strong>M. Nabi</strong><br>
+                  <em>Association for Computational Linguistics (ACL)</em>, 2022 &nbsp; <br>
+                  <a href="https://arxiv.org/pdf/2203.07847.pdf">PDF</a> /
+		  <a href="https://github.com/SAP-samples/acl2022-self-contrastive-decorrelation">code</a>
+
+                </p><p></p>
+<!--
+			      <p>In this paper, we proposed a novel crowd dataset with both annotations of abnormal crowd behavior and crowd emotion. We also presented a method which exploits jointly the complimentary information of these two task, outperforming all baselines of both tasks significantly.
+-->
+		</p><p></p>
+                <p></p>
+              </td>
+            </tr>
+
 			   
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="https://raw.githubusercontent.com/SAP-samples/emnlp2021-attention-contrastive-learning/main/img/attention_contrastive.png" alt="PontTuset" width="140" style="border-style: none">
