--- a/index.html
+++ b/index.html
@@ -198,7 +198,25 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
               </td>
             </tr>
 
-			   
+<!--Next paper should be listed in bottom -->
+	              <td width="25%"><img src="./img/jmlr_22.png" alt="PontTuset" width="150" style="border-style: none">
+	              </td><td width="75%" valign="top">
+	                <p><a href="https://jmlr.org/papers/v23/21-1155.html">
+	<papertitle>Solo-learn: A Library of Self-supervised Methods for Visual Representation Learning</papertitle></a><br>
+			V. Costa, E. Fini, <strong>M. Nabi</strong>, N. Sebe, E. Ricci<br>
+                  <em>Journal of Machine Learning Research (JMLR)</em>, 2022 &nbsp; <br> <!-- <font color="red"><strong>(Oral)</strong></font><br> -->
+		<a href="https://arxiv.org/abs/2108.01775">PDF</a> / 
+		  <a href="https://github.com/vturrisi/solo-learn">code</a> /
+		  <a href="https://solo-learn.readthedocs.io/en/latest/">Documentation</a>
+                </p><p></p>
+<!--
+			      <p>In this paper, we proposed a novel crowd dataset with both annotations of abnormal crowd behavior and crowd emotion. We also presented a method which exploits jointly the complimentary information of these two task, outperforming all baselines of both tasks significantly.
+-->
+		</p><p></p>
+                <p></p>
+              </td>
+            </tr>
+
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="https://raw.githubusercontent.com/SAP-samples/emnlp2021-attention-contrastive-learning/main/img/attention_contrastive.png" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="75%" valign="top">
