--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 		   <tr>
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="https://raw.githubusercontent.com/ygjwd12345/UCD/main/image/ESM.png" alt="PontTuset" width="150" style="border-style: none">
+	              <td width="25%"><img src="https://raw.githubusercontent.com/ygjwd12345/UCD/main/image/ESM.png" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://ieeexplore.ieee.org/abstract/document/9745778">
 	<papertitle>Uncertainty-aware Contrastive Distillation for Incremental Semantic Segmentation</papertitle></a><br>
-			G. Yang, E. Fini, D. Xu; P. Rota; M. Ding, <strong>M. Nabi</strong>, X. Alameda-Pineda, E. Ricci<br>
+			G. Yang, E. Fini, D. Xu, P. Rota; M. Ding, <strong>M. Nabi</strong>, X. Alameda-Pineda, E. Ricci<br>
                   <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</em>, 2022 &nbsp; <br> <!-- <font color="red"><strong>(Oral)</strong></font><br> -->
 		<a href="https://arxiv.org/abs/2203.14098">PDF</a> / 
 		  <a href="https://github.com/ygjwd12345/UCD">code</a> 
