--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 		   <tr>
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="https://raw.githubusercontent.com/ygjwd12345/UCD/main/image/ESM.png" alt="PontTuset" width="140" style="border-style: none">
+	              <td width="25%"><img src="./img/tpami_22.png" alt="PontTuset" width="150" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://ieeexplore.ieee.org/abstract/document/9745778">
 	<papertitle>Uncertainty-aware Contrastive Distillation for Incremental Semantic Segmentation</papertitle></a><br>
