--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 	<papertitle>Differentially Private Federated Learning: A Client Level Perspective</papertitle></a><br>R. Gayer, T. Klein, <strong>M. Nabi</strong><br>
                   <em>Conference on Neural Information Processing Systems (NIPS)</em>, 2017 &nbsp; <br>
                   <em>Workshop on Machine Learning on the Phone and Consumer Devices</em> &nbsp; <br>
-		<font color="red"><strong> >900 Citations</strong></font><br>
+<!--		<font color="red"><strong> >900 Citations</strong></font><br>      -->
 				
 				
                   <a href="https://arxiv.org/pdf/1712.07557.pdf">PDF</a> /
