--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 			   
 			   
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/iccv_23.png" alt="PontTuset" width="150" style="border-style: none">
+	              <td width="25%"><img src="./img/cvpr23.png" alt="PontTuset" width="150" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://ncd-uno.github.io/">
 	<papertitle>Semi-supervised Learning Made Simple with Self-supervised Clustering</papertitle></a><br>
