--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 			   
 			   
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/cvpr23.png" alt="PontTuset" width="150" style="border-style: none">
+	              <td width="25%"><img src="./img/cvpr2023.png" alt="PontTuset" width="150" style="border-style: none">
 	              </td><td width="75%" valign="top">
-	                <p><a href="https://ncd-uno.github.io/">
+	                <p><a href=".">
 	<papertitle>Semi-supervised Learning Made Simple with Self-supervised Clustering</papertitle></a><br>
 			E. Fini, P. Astolfi, K. Alahari, X. Alameda-Pineda, J. Mairal, <strong>M. Nabi</strong>, E. Ricci<br>
                   <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2023 &nbsp; <br>
