--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
               <td width="68%" valign="middle">
                 <p align="center">
                   <name>Moin Nabi</name>
-                  
+<!--    
                 </p><p align="">I am a Principal Scientist at SAP AI CTO office, co-leading the <a href="https://www.sap.com/trends/machine-learning.html">SAP AI Research</a> team in Berlin.
+SECTION -->
 </br>
 		  </br>
 		      Before that, I was a researcher at the University of Trento with <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a> and at the <a href="https://www.cs.washington.edu/">University of Washington</a> working with <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a>.-->
