--- a/index.html
+++ b/index.html
@@ -74,12 +74,18 @@
             <tbody><tr>
               <td width="68%" valign="middle">
                 <p align="center">
-                  <name>Moin Nabi</name>
-<!--    
-                </p><p align="">I am a Principal Scientist at SAP AI CTO office, co-leading the <a href="https://www.sap.com/trends/machine-learning.html">SAP AI Research</a> team in Berlin.
-SECTION -->
+                   <name>Moin Nabi</name>
+                  
+                </p><p align="">I am a Principal Manager/ Scientist at <a href="https://www.sap.com/trends/machine-learning.html">SAP AI Research</a> in Berlin.
 </br>
 		  </br>
+<!--    
+                </p><p align="">I am a Principal Scientist at SAP AI CTO office, co-leading the <a href="https://www.sap.com/trends/machine-learning.html">SAP AI Research</a> team in Berlin.
+ -->
+			<!--    
+                </p><p align="">I am a Principal Scientist at SAP AI CTO office, co-leading the <a href="https://www.sap.com/trends/machine-learning.html">SAP AI Research</a> team in Berlin.
+ -->
+
 		      Before that, I was a researcher at the University of Trento with <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a> and at the <a href="https://www.cs.washington.edu/">University of Washington</a> working with <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a>.-->
 I did my PhD at the <a href="http://www.iit.it/">Italian Institute of Technology</a> where I was advised by Professor <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> and <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from UCL.
 	    </br></br>
