--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 </br>
 		  </br>
 
-		      Before that, I was a researcher at the University of Trento with <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a> and at the <a href="https://www.cs.washington.edu/">University of Washington</a> working with <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a>.
-I did my PhD at the <a href="http://www.iit.it/">Italian Institute of Technology</a> where I was advised by Professor <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> and <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from UCL.
+		      Before this, I was a postdoctoral researcher at University of Trento collaborating with <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a> and , and a visiting scholar at University of Washington hosted by <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a>.
+I received a PhD in computer science in 2015, during which I was advised by <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> from <a href="http://www.iit.it/">Italian Institute of Technology</a> and <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from UCL.
 	    </br></br>
 		  I am so delighted to start computer vision research with <a href="https://explorecourses.stanford.edu/instructor/mehrdads">Mehrdad Shahshahani</a> at <a href="http://www.ipm.ac.ir/">IPM Vision Group</a>.
 I did my masters in AI and my bachelors in software engineering in Iran.
