--- a/index.html
+++ b/index.html
@@ -80,13 +80,15 @@
 </br>
 		  </br>
 
-		      Before this, I was a postdoctoral researcher at University of Trento collaborating with <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a> and , and a visiting scholar at University of Washington hosted by <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a>.
-I received a PhD in computer science in 2015, during which I was advised by <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> from <a href="http://www.iit.it/">Italian Institute of Technology</a> and <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from UCL.
+		      Before this, I was a postdoctoral researcher at University of Trento collaborating with <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a>, and a visiting scholar at University of Washington hosted by <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a>.
+I received a PhD in computer science in 2015, during which I was advised by <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> from <a href="http://www.iit.it/">Italian Institute of Technology</a> and <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from UCL. I am a board member of the Doctoral School in Industrial Innovation at the University of Trento and a member of <a href="https://ellis.eu/">ELLIS</a> society.
 	    </br></br>
-		  I am so delighted to start computer vision research with <a href="https://explorecourses.stanford.edu/instructor/mehrdads">Mehrdad Shahshahani</a> at <a href="http://www.ipm.ac.ir/">IPM Vision Group</a>.
+<!--
+I am so delighted to start computer vision research with <a href="https://explorecourses.stanford.edu/instructor/mehrdads">Mehrdad Shahshahani</a> at <a href="http://www.ipm.ac.ir/">IPM Vision Group</a>.
 I did my masters in AI and my bachelors in software engineering in Iran.
 	  </br>
-
+-->
+	      
 <!--I had the opportunity to work under
 I started Computer Vision with Mehrdad Shahshahani
 Prior to my Ph.D., I spent one year as a research assistant at MI&V lab in <a href="http://www.test.com">Sharif University of Technology</a>. I was also fortunate enough to be advised by Professor <a href="http://www.test.com">Mehrdad Shahshahani</a> at the <a href="http://www.test.com">IPM Vision Group</a> from 2009 until 2011. I used to collaborate with IPPR lab at <a href="http://www.test.com">Amirkabir University of Technology</a> under supervision of Professor <a href="http://www.test.com">Mohammad Rahmati</a> as well.
