--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tbody><tr>
               <td>
-                <heading>Current highlights</heading>
+                <heading><font size="3">Current highlights</heading>
 
    
 		      
@@ -936,7 +936,7 @@ recognition tasks, both in image and video understanding.
             </tr>
 
 -->
-
+<br>
 <!--SECTION -->
 
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
