--- a/index.html
+++ b/index.html
@@ -935,13 +935,13 @@ recognition tasks, both in image and video understanding.
             </tr>
 
 -->
-<br>
+<br><br>
 <!--SECTION -->
 
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tbody><tr>
               <td>
-                <heading>Students and Interns:</heading>
+                <heading><font size="4">Students and Interns:</heading>
 
 <!--
 		      </p>
