--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 
 -->	
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="7">
-		<tbody>
-<!--		   <tr>
+<!--		<tbody>
+		   <tr>
 -->				
 		   
 
