--- a/index.html
+++ b/index.html
@@ -205,16 +205,15 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
               </td>
             </tr>
           </tbody></table>
-
 -->	
-          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="7">
-<!--		<tbody>
+<!--          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="7">
+		<tbody>
 		   <tr>
 -->				
 		   
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/acl2023.png" alt="PontTuset" width="140" style="border-style: none">
+	              <td width="25%"><img src="./img/acl2023.png" alt="PontTuset" width="150" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href="https://arxiv.org/abs/2211.04928">
 	<papertitle>miCSE: Mutual Information Contrastive Learning for Low-shot Sentence Embeddings</papertitle></a><br>
