--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
             </tr>
           </tbody></table>
 -->	
-<!--          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="7">
-		<tbody>
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="7">
+<!--		<tbody>
 		   <tr>
 -->				
 		   
