--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </br>
 		  </br>
 
-		      Before this, I was a postdoctoral researcher at University of Trento collaborating with <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a>, and a visiting scholar at University of Washington hosted by <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a>.
+		      Before this, I was a postdoctoral researcher at University of Trento collaborating with <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a>, and a visiting scholar at University of Washington<!-- hosted by <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a> -->.
 I received a PhD in computer science in 2015, during which I was advised by <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> from <a href="http://www.iit.it/">Italian Institute of Technology</a> and <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from UCL. 
 		  </br> I am a board member of the Doctoral School in Industrial Innovation at the University of Trento and a member of <a href="https://ellis.eu/">ELLIS</a> society.
 	    </br></br>
