--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		      Before this, I was a postdoctoral researcher at University of Trento collaborating with <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a>, and a visiting scholar at University of Washington<!-- hosted by <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a> -->.
 I received a PhD in computer science in 2015, during which I was advised by <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> from <a href="http://www.iit.it/">Italian Institute of Technology</a> and <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from UCL. 
 <!--		  </br> I am a board member of the Doctoral School in Industrial Innovation at the University of Trento and a member of <a href="https://ellis.eu/">ELLIS</a> society.     -->
-		</br> I am a member of the European Laboratory for Learning and Intelligent Systems (<a href="https://ellis.eu/">ELLIS</a>).
+		</br> I am a <a href="https://ellis.eu/members/">member</a> of the European Laboratory for Learning and Intelligent Systems (<a href="https://ellis.eu/">ELLIS</a>) and a <a href="https://elise2oc.fundingbox.com/">scientific advisor</a> for the European Network of AI Excellence Centres (<a href="https://www.elise-ai.eu/">ELISE</a>).	  
 	    </br></br>
 <!--
 I am so delighted to start computer vision research with <a href="https://explorecourses.stanford.edu/instructor/mehrdads">Mehrdad Shahshahani</a> at <a href="http://www.ipm.ac.ir/">IPM Vision Group</a>.
