--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
 
    
 		      
-<p> <strong>[arXiv]</strong> <a href="https://arxiv.org/abs/2212.05102"> Continual Semi-supervised Learning</a></p>
+<p> <strong>[ICCV 2023]</strong> <a href="https://arxiv.org/abs/2212.05102"> Continual Semi-supervised Learning</a></p>
 		      
 <p> <strong>[ACL 2023]</strong> <a href="https://arxiv.org/abs/2211.04928"> Few-shot Learning of LLMs</a></p>
 
