--- a/index.html
+++ b/index.html
@@ -211,7 +211,26 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 <!--		<tbody>
 		   <tr>
 -->				
-		   
+
+<!--Next paper should be listed in bottom -->
+	              <td width="25%"><img src="./img/cvpr2023.png" alt="PontTuset" width="140" style="border-style: none">
+	              </td><td width="75%" valign="top">
+	                <p><a href=".">
+	<papertitle>A soft nearest-neighbor framework for continual semi-supervised learning</papertitle></a><br>
+			Z. Kang, E. Fini, <strong>M. Nabi</strong>, E. Ricci, K. Alahari<br>
+                  <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2023 &nbsp; <br>
+		<a href="https://arxiv.org/pdf/2212.05102.pdf">PDF</a> / 
+		<a href=".">project page</a> /
+		  <a href=".">code</a>
+
+                </p><p></p>
+<!--
+			      <p>In this paper, we proposed a novel crowd dataset with both annotations of abnormal crowd behavior and crowd emotion. We also presented a method which exploits jointly the complimentary information of these two task, outperforming all baselines of both tasks significantly.
+-->
+		</p><p></p>
+                <p></p>
+              </td>
+            </tr>		  
 
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/acl2023.png" alt="PontTuset" width="150" style="border-style: none">
