--- a/index.html
+++ b/index.html
@@ -207,16 +207,16 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
             </tr>
           </tbody></table>
 -->	
-          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="7">
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
 <!--		<tbody>
 		   <tr>
 -->				
 
 <!--Next paper should be listed in bottom -->
-	              <td width="25%"><img src="./img/cvpr2023.png" alt="PontTuset" width="140" style="border-style: none">
+	              <td width="25%"><img src="./img/iccv2023.png" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="75%" valign="top">
 	                <p><a href=".">
-	<papertitle>A soft nearest-neighbor framework for continual semi-supervised learning</papertitle></a><br>
+	<papertitle>A Soft Nearest-neighbor Framework for Continual Semi-supervised Learning</papertitle></a><br>
 			Z. Kang, E. Fini, <strong>M. Nabi</strong>, E. Ricci, K. Alahari<br>
                   <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2023 &nbsp; <br>
 		<a href="https://arxiv.org/pdf/2212.05102.pdf">PDF</a> / 
