--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/iccv2023.png" alt="PontTuset" width="140" style="border-style: none">
 	              </td><td width="75%" valign="top">
-	                <p><a href=".">
+	                <p><a href="https://arxiv.org/abs/2212.05102">
 	<papertitle>A Soft Nearest-neighbor Framework for Continual Semi-supervised Learning</papertitle></a><br>
 			Z. Kang, E. Fini, <strong>M. Nabi</strong>, E. Ricci, K. Alahari<br>
                   <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2023 &nbsp; <br>
