--- a/index.html
+++ b/index.html
@@ -193,14 +193,15 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 
 <!--SECTION -->
 
-          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tbody><tr>
               <td>
                 <heading>Selected Publications</heading>
-		      <p>For the full list of my publications please visit my <a href="https://scholar.google.com/citations?hl=en&user=31seHAMAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> page.</p>
+<!--		      <p>For the full list of my publications please visit my <a href="https://scholar.google.com/citations?hl=en&user=31seHAMAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> page.</p>
 	
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="7">
-
+-->
+	  
 
 <!--Next paper should be listed in bottom -->
 	              <td width="25%"><img src="./img/iccv2023.png" alt="PontTuset" width="140" style="border-style: none">
